<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Scotland Yard</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_map">Map</string>
    <string name="URL_ins">http://www.benjaminh.de/sy/ins.php</string>
    <string name="URL_ajax">http://www.benjaminh.de/sy/ajax.php</string>
    <string name="action_settings">Einstellungen</string>
    <string name="action_mapmode">Karte</string>
    <string name="action_refresh">aktualisieren</string>
    <string name="action_interact">Interaktion</string>
    <string name="action_interact_comments_by">Kommentare von ...</string>
    <string name="action_interact_comments_by_X">Kommentare von X ...</string>
    <!-- Dialog -->
    <string name="dialog_number_title">Nummer</string>
    <string name="dialog_number_description">Nummer eingeben</string>
    <string name="dialog_number_ok">OK</string>
    <string name="dialog_number_cancel">abbrechen</string>
    <string name="pref_header_main">Gruppeneinstellungen</string>
    <string name="pref_title_group_id">Gruppennummer</string>
    <string name="pref_summary_group_id">Wird am Anfang zugeteilt</string>
    <string name="pref_title_auto_submit">Standort senden</string>
    <string name="pref_summary_auto_submit">Der aktuelle Standort wird automatisch regelmäßig übertragen</string>
    <string name="pref_title_submit_interval">Übertragungs Intervall</string>
    <string name="pref_dialog_submit_interval">Intervall wählen</string>

    <string-array name="pref_submit_interval_entries">
        <item>30 Sekunden</item>
        <item>1 Minute</item>
        <item>2 Minuten</item>
        <item>5 Minuten</item>
        <item>7 Minuten</item>
        <item>10 Minuten</item>
    </string-array>
    <string-array name="pref_submit_interval_values">
        <item>30</item>
        <item>60</item>
        <item>120</item>
        <item>300</item>
        <item>620</item>
        <item>600</item>
    </string-array>

    <string name="pref_submit_interval_default">30</string>

    <string-array name="transportation_array">
        <item>[Bitte wählen]</item>
        <item>Strassenbahn</item>
        <item>Bus</item>
        <item>Zu Fuss</item>
    </string-array>

    <!-- Address format -->
    <string name="address_output_string">%1$s %2$s %3$s</string>

    <!-- Latitude, longitude format -->
    <string name="latitude_longitude">%1$.8f, %2$.8f</string>

    <!-- Messages -->
    <string name="connected">Client connected</string>
    <string name="connection_error_code_unknown">Unknown connection error code:  %1$d</string>
    <string name="connection_failed">Connection failed</string>
    <string name="disconnected">Client disconnected</string>
    <string name="get_address">Get Address</string>
    <string name="get_location">Get Location</string>
    <string name="illegal_argument_exception">        Illegal arguments: Latitude %1$.8f Longitude %2$.8f</string>
    <string name="invalid_action">Invalid intent action %1$s</string>
    <string name="invalid_integer_id">Invalid integer request ID: %1$s</string>
    <string name="IO_Exception_getFromLocation">IO Exception in Geocoder.getFromLocation()</string>
    <string name="location_requested">Periodic updates requested</string>
    <string name="location_updated">Location updated</string>
    <string name="location_update_error">Location update failed</string>
    <string name="location_update_error_detail">        Location update error. code %1$d message %2$s</string>
    <string name="location_update_missing_update">        Location update error. No incoming location.</string>
    <string name="location_updates_stopped">Periodic updates stopped</string>
    <string name="log_new_location">New location: %1$s</string>
    <string name="no_address_found">No address found for location</string>
    <string name="no_connection">No connection: Cannot request location</string>
    <string name="no_geocoder_available">Cannot get address. No geocoder available.</string>
    <string name="no_location_available">Location not available</string>
    <string name="resolved">Error resolved. Please re-try operation.</string>
    <string name="no_resolution">Google Play services: unable to resolve connection error.</string>
    <string name="periodic_update_stop">Stopping periodic updates</string>
    <string name="play_services_available">Google Play services is available</string>
    <string name="request_location_updates_in_progress">        Can\'t request location updates, previous request hasn\'t finished</string>
    <string name="start_updates">Start Updates</string>
    <string name="stop_updates">Stop Updates</string>
    <string name="unknown">--Unknown--</string>
    <string name="unknown_activity_request_code">        Received an unknown activity request code %1$d in onActivityResult.</string>

    <!-- Fehler -->
    <string name="connection_error_code">Connection failure error code: %1$d</string>
    <string name="connection_error_disabled">Google Play services is disabled</string>
    <string name="connection_error_internal">An internal error occurred</string>
    <string name="connection_error_invalid">The version of Google Play services on this device is not authentic</string>
    <string name="connection_error_invalid_account">The specified account name is invalid</string>
    <string name="connection_error_license_check_failed">The app is not licensed to the user</string>
    <string name="connection_error_message">Connection failure error message: %1$s</string>
    <string name="connection_error_misconfigured">The application is misconfigured</string>
    <string name="connection_error_missing">Google Play services is missing</string>
    <string name="connection_error_needs_resolution">Additional resolution is required</string>
    <string name="connection_error_network">A network error occurred</string>
    <string name="connection_error_outdated">Google Play services is out of date</string>
    <string name="connection_error_sign_in_required">The user is not signed in</string>
    <string name="connection_error_unknown">An unknown error occurred</string>
    <string name="title_activity_interact">Interact</string>
    <string name="main_mrX_direction_hint">z.B. nächstes Ziel</string>
    <string name="send">Senden</string>
    <string name="moreComments">+</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error">Fehler</string>
    <string name="main_mrX_sendInformationHint">Diese Eingaben werden beim nächsten Übertragen der Position mit gesendet.</string>
    <string name="main_mrX_direction">Richtung:</string>
    <string name="main_mrX_comment">Kommentar:</string>
    <string name="main_mrX_mrXonly">Folgendes ist nur für Mister X Gruppen:</string>
    <string name="main_mrX_caughtText">Gefangen von Gruppe</string>
    <string name="main_sendPosition">Position jetzt bekanntgeben</string>
    <string name="main_group">Gruppe:</string>
    <string name="main_location_lastSent">letzte gesendete Position</string>
    <string name="main_location_lastKnown">letzte erkannte Position</string>
    <string name="error_invalidGroupId">Bitte eine gültige Gruppennummer eingeben!</string>
    <string name="comment_caughtBy">Gefangen von\u0020</string>
    <string name="toast_sendingPosition">Sende Position</string>
    <string name="toast_trackingEnd">Tracking beendet</string>
    <string name="error_transmission">Es gab ein Problem bei der Übertragung</string>
    <string name="interact_sendLocationCB">Dem Kommentar die aktuelle Position beifügen</string>
    <string name="sending">Sende</string>
    <string name="ready">bereit</string>

</resources>
