<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="mfs.ese.scotlandyard.Interact$PlaceholderFragment">
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:focusableInTouchMode="true"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_above="@+id/sendComment"
        android:id="@+id/scrollView"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/commentText"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:focusable="false" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/moreComments"
                android:id="@+id/buttonMoreComments"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_below="@+id/commentText" />
        </RelativeLayout>
    </ScrollView>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:id="@+id/sendComment"
        android:layout_alignTop="@+id/editComment"
        android:layout_alignRight="@+id/scrollView"
        android:layout_alignEnd="@+id/scrollView"
        android:layout_alignBottom="@+id/editComment" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/editComment"
        android:hint="Kommentar"
        android:layout_above="@+id/cbAddLocation"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:id="@+id/cbAddLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/interact_sendLocationCB"
        android:textSize="12sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/sendComment"
        android:layout_alignEnd="@+id/sendComment"
        android:singleLine="false" />

</RelativeLayout>
